--- a/README.Rmd
+++ b/README.Rmd
@@ -18,22 +18,32 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of tradisanalyseR is to ...
+tradisanalyseR was developed as a collection of scripts to further analyse output produced by the Bio-TraDIS toolkit (https://github.com/sanger-pathogens/Bio-Tradis). It takes the resulting csv files for any number of conditions and the corresponding EMBL file and formats it for use in these scripts.
 
 ## Installation
 
-You can install the released version of tradisanalyseR from [CRAN](https://CRAN.R-project.org) with:
+<!-- You can install the released version of tradisanalyseR from  [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
 install.packages("tradisanalyseR")
 ```
-
-And the development version from [GitHub](https://github.com/) with:
+-->
+The development version from [GitHub](https://github.com/) with:
 
 ``` r
 # install.packages("devtools")
 devtools::install_github("gerisullivan/tradisanalyseR")
 ```
+
+tradisanalyseR has the following dependencies:
+```r
+dplyr
+ggplot2
+purrr
+stats
+stringr
+```
+
 ## Example
 
 This is a basic example which shows you how to solve a common problem:
